# aeo-quant

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: 2026-04-17-nvfp4-sm121-breakthrough.md  gemma4-fp8-optimization.md  gemma4-fp8-results.md  gemma4-fp8-retrospective.md  turboquant-gemma4-research.md
docs/archive/: turboquant-gemma4-continuation.md  turboquant-gemma4-fp8-build-continuation.md
docs/plans/: 2026-04-15-fp8-moe-decode-optimization.md  2026-04-16-native-nvfp4-matmul.md  2026-04-17-nvfp4-3d-fused-experts.md  2026-04-18-nvfp4-next-round.md  2026-04-20-cuda-graph-handoff.md  2026-04-23-in-transformers-envelope-closed.md
docs/references/: triton_tutorial_10_v36.py
examples/: CLAUDE.md  README.md  build_checkpoint.py  build_checkpoint_nvfp4.py  compile_probe.py  cuda_graph_probe.py  fp4_probe.py  multi_turn_16k.py  multi_turn_32k.py  parity_check.py  parity_check_long.py  parity_long_check.py  probe_logits_at_divergence.py  probe_nvfp4_aot.py  probe_nvfp4_aot_3d.py  probe_nvfp4_minimal.py  probe_nvfp4_torchao.py  profile_generate.py  profile_nvfp4_decode.py  quality_check.py  reasoning_check.py  safe_probe.py  smoke_nvfp4.py  smoke_nvfp4_native.py  test_nvfp4_3d_ab_alpha.py  test_nvfp4_3d_kernel.py  test_nvfp4_bridge.py  test_nvfp4_kernel.py  tune_nvfp4_kernel.py
examples/archive/: bf16_reference.py  nvfp4_validate.py  turboquant_validate.py
kb/: model-optimization-learnings.md  nvfp4-blackwell-research.md
src/aeo_quant/: __init__.py  _lazy.py
src/aeo_quant/bridges/: __init__.py
src/aeo_quant/bridges/gemma4/: __init__.py  cache.py  linear_fp8.py  loader.py  modeling.py  modeling_nvfp4.py  parser.py  streamer.py  template.py
src/aeo_quant/core/: __init__.py  analysis.py  coherence.py  config.py  context.py  parsing.py  segments.py  streaming.py  types.py  viewer.py  writers.py
src/aeo_quant/gpu/: __init__.py  kernel_probe.py  memory.py  nvfp4_matmul.py  quant.py
src/aeo_quant/harness/: __init__.py  cli.py  client.py  protocol.py  server.py
src/aeo_quant/plots/: __init__.py  context_scaling.py
src/aeo_quant/prompts/: __init__.py  follow_ups.py  project_arc.py
src/aeo_quant/workloads/: __init__.py  multi_turn.py  parity.py  quality.py  reasoning.py
tests/fixtures/: parity_baseline.txt  parity_long_baseline_nvfp4.txt
tools/: dump_triton_sass.sh  rebuild_triton_sm121.md
