[project]
name = "aeo-quant"
version = "0.1.0"
description = "AeyeOps quantization toolkit — model evaluation, benchmarking, and quantization bridges"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = []

[project.optional-dependencies]
gpu = ["torch>=2.4", "psutil>=5.9"]
bridges = ["aeo-quant[gpu]", "transformers>=4.45", "accelerate>=0.30", "safetensors>=0.4", "turboquant>=0.2.0"]
plots = ["matplotlib>=3.8"]
all = ["aeo-quant[bridges]", "aeo-quant[plots]"]
dev = ["pytest>=8.0", "ruff>=0.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aeo_quant"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
