[project]
name = "aeo-quant"
version = "0.1.17"
description = "AeyeOps quantization toolkit — model evaluation, benchmarking, and quantization bridges"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "torchao>=0.17.0",
]

[project.optional-dependencies]
gpu = ["torch>=2.4", "psutil>=5.9"]
bridges = ["aeo-quant[gpu]", "transformers>=4.45", "accelerate>=0.30", "safetensors>=0.4", "turboquant>=0.2.0"]
plots = ["matplotlib>=3.8", "openpyxl>=3.1"]
all = ["aeo-quant[bridges]", "aeo-quant[plots]"]
dev = ["pytest>=8.0", "ruff>=0.15", "ty>=0.0.32,<0.1"]

[project.scripts]
aeo-harness = "aeo_quant.harness.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aeo_quant"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Long prompt strings and CSS literals — breaking them hurts readability
"src/aeo_quant/prompts/project_arc.py" = ["E501"]
"src/aeo_quant/core/viewer.py" = ["E501"]
"src/aeo_quant/core/types.py" = ["E501"]
"src/aeo_quant/gpu/memory.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ty.src]
# Triton kernels use tl.constexpr and launch-time specialization that ty's
# current type model can't represent (it flags legitimate constexpr args as
# invalid). Exclude the file until upstream support lands.
exclude = [
    "src/aeo_quant/gpu/nvfp4_matmul.py",
]
